<resources>
    <string name="app_name">Book Finder</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="origin">Origin</string>
    <string name="title">Title</string>
    <string name="genre">Genre</string>
    <string name="dan_brown_books">Dan Brown Books</string>
    <string name="todo">TODO</string>
    <string name="_2017">2017</string>
    <string name="view_book_description">View book description</string>
    <string name="description">Description</string>
    <string name="see_it_on_website">See it on website</string>
    <string name="back">Back</string>
    <string name="refresh">Refresh</string>
    <string name="forward">Forward</string>
</resources>